// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item should be support prefix 1`] = `
<div
  class="FBox-root FBox-system FBox-system-0 FItem-root"
>
  <div
    class="FItem-prefixRoot"
  >
    <svg
      data-testid="icon"
      style="width: 1.3em; height: 1.3em; display: inline-block; font-size: inherit; fill: currentColor;"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"
      />
    </svg>
  </div>
  <div
    class="FItem-text FItem-textExpanded FItem-textHasPrefix"
  >
    Hello World
  </div>
</div>
`;

exports[`Item should be support prefix without children 1`] = `
<div>
  <div
    class="FBox-root FBox-system FBox-system-0 FItem-root"
  >
    <div
      class="FItem-prefixRoot"
    >
      <svg
        data-testid="icon"
        style="width: 1.3em; height: 1.3em; display: inline-block; font-size: inherit; fill: currentColor;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"
        />
      </svg>
    </div>
    <div
      class="FItem-text FItem-textExpanded FItem-textNoChildren FItem-textHasPrefix"
    />
  </div>
</div>
`;
